--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/animations/animations.css">
   <title>Games</title>
 </head>
 <body>
+  <h4>Games</h4>
   <div class="container">
-    <h4>Games</h4>
+    <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
   </div>
   <script src="js/question-1.js"></script>
   <script src="js/question-2.js"></script>
