--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/animations/animations.css">
+  <link rel="stylesheet" href="css/animations/loading-animation.css">
   <title>Games</title>
 </head>
 <body>
-  <h4>Games</h4>
+  <div class="header-container">
+    <h4>Browse Games</h4>
+  </div>  
   <div class="container">
     <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
   </div>
-  <script src="js/question-1.js"></script>
-  <script src="js/question-2.js"></script>
+  <script src="js/Components/displayError.js"></script>
+  <script src="js/API/question-2.js"></script>
 </body>
 </html>
