--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
   </div>
-  <script src="js/Components/displayError.js"></script>
-  <script src="js/API/question-2.js"></script>
+  <script src="js/components/displayError.js"></script>
+  <script src="js/question-2.js"></script>
 </body>
 </html>
